fix whitespace issues

--- a/wp-content/themes/1h1h/app.css
+++ b/wp-content/themes/1h1h/app.css
@@ -21,10 +21,16 @@
 	text-align: center;
 }
 .loading-text {
-	width: 200px;
-	height: 200px;
 	margin: auto auto;
 	line-height: 2;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	-webkit-transform:translate(-50%, -50%);
+	-moz-transform:translate(-50%, -50%);
+	-ms-transform:translate(-50%, -50%);
+	-o-transform:translate(-50%, -50%);
+	transform:translate(-50%, -50%);
 }
 .loading-icon {
 	width: 15px;
